# SplineConcepts

./: .gitignore  CMakeLists.txt  README.md
documentation/method/: closure.md  method.md
examples/: Geometry.cpp  NumCppTest.cpp  Splines.cpp
splineconcepts/: Geometry.hpp  Mesh.hpp  Spline.hpp
tests/: SplineOperations.cpp
